# stereo-heli

./: .gitignore  CMakeLists.txt  README.md  cap1.tiff  settings.ini  stereo-heli.json
Hardware/DotProjector/dot_projector/: dot_projector.kicad_pcb  dot_projector.kicad_prl  dot_projector.kicad_pro  dot_projector.kicad_sch  dot_projector.step  fp-info-cache
Hardware/Fc/: #auto_saved_files#  .gitignore  Fc-bottom.pos  Fc-top.pos  Fc.kicad_pcb  Fc.kicad_prl  Fc.kicad_pro  Fc.kicad_sch  FcPeripherals.kicad_sch  FcPower.kicad_sch  FcPower.kicad_sch-bak  Status.kicad_sch  _autosave-Fc.kicad_pcb  fp-info-cache
Hardware/Fc/gbr/: Fc-B_Cu.gbr  Fc-B_Mask.gbr  Fc-B_Paste.gbr  Fc-B_Silkscreen.gbr  Fc-Edge_Cuts.gbr  Fc-F_Cu.gbr  Fc-F_Mask.gbr  Fc-F_Paste.gbr  Fc-F_Silkscreen.gbr  Fc-In1_Cu.gbr  Fc-In2_Cu.gbr  Fc-bottom.pos  Fc-job.gbrjob  Fc-top.pos  Fc.csv
Hardware/StereoPiAi/: StereoPiAi.kicad_prl  StereoPiAi.kicad_pro
Heli/: CMakeLists.txt
Heli/Cadre/: CMakeLists.txt  Cadre.cpp  Cadre.fpp  Cadre.hpp
Heli/Cam/: CMakeLists.txt  Cam.cpp  Cam.fpp  Cam.hpp  CamBuffer.cpp  CamBuffer.hpp  CamCfg.h  CamFrame.cpp  CamFrame.hpp  CameraConfig.hpp
Heli/Cam/core/: completed_request.hpp  libcamera_app.cc  libcamera_app.h  stream_info.hpp
Heli/Display/: CMakeLists.txt  Display.cpp  Display.fpp  Display.hpp  oled.cpp  oled.hpp
Heli/Fc/: CMakeLists.txt  Fc.cpp  Fc.fpp  Fc.hpp  FcMsg.cpp  FcMsp.cpp  INAVMessages.cpp  INAVMessages.hpp  MspMessage.cpp  MspMessage.hpp  README.md  crc.c  crc.h
Heli/Fm/: CMakeLists.txt  CameraModel.hpp  Fm.cpp  Fm.fpp  Fm.hpp  Transform.cpp  Transform.hpp
Heli/FramePipe/: CMakeLists.txt  FramePipe.cpp  FramePipe.fpp  FramePipe.hpp  FramePipeImpl.cc  FramePipeImpl.h
Heli/IntervalTimer/: CMakeLists.txt  IntervalTimer.cpp  IntervalTimer.fpp  IntervalTimer.hpp
Heli/Joystick/: CMakeLists.txt  Joystick.cpp  Joystick.fpp  Joystick.hpp
Heli/Nav/: CMakeLists.txt  Nav.cpp  Nav.fpp  Nav.hpp  NavVo.cpp  NavVo.hpp  Stereo.cpp  Stereo.hpp  Vo.cpp  Vo.hpp
Heli/Nav/slam/: CMakeLists.txt
Heli/Nav/slam/include/: Frame.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  System.h  Tracking.h
Heli/Nav/slam/src/: Converter.cc  Frame.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc
Heli/Sapp/: CMakeLists.txt  Sapp.cpp  Sapp.fpp  Sapp.hpp
Heli/Stereo/: CMakeLists.txt  Stereo.cpp  Stereo.fpp  Stereo.hpp
Heli/Top/: CMakeLists.txt  HeliTopologyDefs.cpp  HeliTopologyDefs.hpp  RpiTopologyDefs.cpp  RpiTopologyDefs.hpp  instances.fpp  main.cc  topology.fpp
Heli/Top/dep/: Components.hpp  RpiRTLinuxTopologyAppAi.xml  Topology.cc
Heli/Types/: CMakeLists.txt  MspCircularBuffer.cpp  MspCircularBuffer.hpp  TQueue.cpp  TQueue.hpp
Heli/VideoStreamer/: CMakeLists.txt  VideoStreamer.cpp  VideoStreamer.fpp  VideoStreamer.hpp
Heli/VideoStreamer/encoder/: encoder.hpp  h264_encoder.cpp  h264_encoder.hpp
Heli/VideoStreamer/output/: net_output.cpp  net_output.hpp  output.cpp  output.hpp
Heli/VideoStreamer/preview/: drm_preview.cpp  preview.hpp
Heli/Vis/: CMakeLists.txt  Mat.cpp  Mat.hpp  Vis.cpp  Vis.fpp  Vis.hpp  VisStage.cpp  VisStage.hpp
Heli/Vis/proto/: CMakeLists.txt
Heli/Vis/proto/tests/: basic.cpp  glsl.comp
Heli/parallel/: CMakeLists.txt  parallel.cpp  parallel.hpp
cmake/platform/: ti.cmake
cmake/toolchain/: fc.cmake  nav.cmake
config/: AcConstants.fpp  CamCfg.hpp  CommandDispatcherImplCfg.hpp  FcCfg.hpp  FpConfig.hpp  SappCfg.hpp  Timer.hpp
include/libcamera/: version.h
include/libcamera/internal/: tracepoints.h
include/libcamera/ipa/: core_ipa_serializer.h  raspberrypi_ipa_interface.h  raspberrypi_ipa_proxy.h  raspberrypi_ipa_serializer.h  rkisp1_ipa_interface.h  rkisp1_ipa_proxy.h  rkisp1_ipa_serializer.h
include/opencv2/: cvconfig.h  opencv_modules.hpp
include/opencv2/core/: eigen.hpp
lib/: libcamera-base.so.0.0.1  libcamera-base.so.0.0.2  libcamera-base.so.0.0.3  libcamera.so.0.0.1  libcamera.so.0.0.2  libcamera.so.0.0.3  libopencv_calib3d.so.4.6.0  libopencv_core.so.4.6.0  libopencv_imgcodecs.so.4.6.0  libopencv_imgproc.so.4.6.0
proto/: controller.py
proto/calib/: calibration.ipynb  capture1.tiff  capture10.tiff  capture2.tiff  capture3.tiff  capture4.tiff  capture5.tiff  capture6.tiff  capture7.tiff  capture8.tiff  capture9.tiff  fm000_model.seq.templ  svd.ipynb  vis000_model.seq.templ
proto/calib/640x240/: capture3.tiff
seq/: INAV_6.0.0_cli_20230129_092435.txt  calibration.fnb  cam001_config.seq  cam002_calibration-redline.seq  cam002_calibration.seq  cam_take_pic.seq  cam_test.fnb  controller.seq  fc.fnb  fm000_model-1.seq  fm001_tree.seq  stereo.fnb  test001_sign_of_life.seq  vis000_model-1.seq  vis000_model-2.seq  vis000_model.seq  vis001_stereo.seq
